Added One More Video to the Slides

--- a/index.html
+++ b/index.html
@@ -217,9 +217,20 @@
                     <p class="feature-description">33° 57′ 42.1″ N&nbsp;&nbsp;&nbsp;118° 27′ 5.0″ W<br>Los Angeles, CA<br>7,500 miles away</p>
                 </div>
             </div>
+
+            <div class="carousel-slide" id="slide16">
+                <video class="feature-video" playsinline data-duration="auto">
+                    <source src="assets/moving/Gaby.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="slide-content">
+                    <h2 class="feature-title">Gaby + Mariana</h2>
+                    <p class="feature-description">37° 54′ 22″ N&nbsp;&nbsp;&nbsp;122° 32′ 42″ W<br>Mill Valley, CA<br>7,570 miles away</p>
+                </div>
+            </div>
             
             <!-- FINAL SLIDE -->
-            <div class="carousel-slide" id="slide16">
+            <div class="carousel-slide" id="slide17">
                 <video class="feature-video" playsinline data-duration="auto">
                     <source src="assets/moving/S.mov" type="video/mp4">
                     Your browser does not support the video tag.
@@ -239,7 +250,7 @@
                     <div class="counter-display">
                         <span class="current-slide" id="currentSlide">01</span>
                         <div class="counter-separator"></div>
-                        <span class="total-slides" id="totalSlides">17</span>
+                        <span class="total-slides" id="totalSlides">18</span>
                     </div>
                 </div>
             </div>
