Fixed Mobile Progress Bar
v1.1

--- a/index.html
+++ b/index.html
@@ -261,9 +261,21 @@
                     </button>
                 </div>
                 <div class="video-progress" id="videoProgress">
-                    <svg class="progress-ring">
-                        <circle class="progress-ring__circle"></circle>
-                        <circle class="progress-ring__progress"></circle>
+                    <svg class="progress-ring" width="48" height="48">
+                        <circle
+                            class="progress-ring__circle"
+                            r="21"
+                            cx="24"
+                            cy="24"
+                            stroke-width="3"
+                        />
+                        <circle
+                            class="progress-ring__progress"
+                            r="21"
+                            cx="24"
+                            cy="24"
+                            stroke-width="3"
+                        />
                     </svg>
                     <div class="progress-time">0</div>
                 </div>
